--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
@@ -102,7 +102,7 @@
 <div id="ImgFullItem">
 	<div id="ImgFullItemLoad" class="noDisplay" style="position: fixed;"></div>
 </div>
-<div class="full_area0">
+<div class="full_area0" id="fullItem">
 	<div class="full_area0 fullItem">
 		<div class="full_area0 itemBlock noTopBorder">
 			<h3 class="xLarge_area0_p8 endline blockHeader">
