--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/infoPage.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/infoPage.css
@@ -97,7 +97,12 @@
 	border: 0px;
 }
 
-.infoPage .sideSection .gf-result{
+.gfc-result .gf-title {
+	height: auto !important;
+}
+
+
+.infoPage .sideSection .gf-result {
 	margin-top: 1.2em;
 } 
 
